# ddrs

./: .gitignore  Cargo.toml  README.md
.cursor/rules/: project.mdc
kernel/: Makefile  amd_smn.c  amd_smn.h  dkms.conf
src/: channels.rs  display.rs  dmi.rs  main.rs  smn.rs  smu.rs  timings.rs
